# PyGridNetwork

./: .flake8  Procfile  README.md  app.json  dev-requirements.txt  requirements.txt  run.py  setup.cfg  setup.py
.github/: run-tests.yml
.github/workflows/: docker-build.yml  tests.yml
app/: __init__.py
app/main/: __init__.py  codes.py
app/main/events/: __init__.py  network.py  node_properties.py  socket_handler.py
app/main/routes/: __init__.py  dataset.py  general.py  models.py  nodes.py
app/main/workers/: worker.py
gridnetwork/: __init__.py
gridnetwork/events/: network.py  socket_handler.py
gridnetwork/routes/: dataset.py  general.py  models.py  network.py  nodes.py
gridnetwork/workers/: worker.py
test/: conftest.py  test_network.py
