[metadata]
name = gridnetwork
version = 0.1.1
author= OpenMined
author_email = contact@openmined.org
summary = A network router used by the PyGrid platform.
description-file = README.md
long_description_content_type = text/markdown
url = https://github.com/OpenMined/GridNetwork
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

requires-python = >=3.5

[files]
packages = 
  app

